UI adjustments + bug fixes

--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -35,6 +35,7 @@ html * {
 
 .navbar-brand {
     padding: 0px;
+    margin-right: auto;
 }
 
 body {
@@ -149,6 +150,27 @@ a.breadcrumb-item-profile {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+
+.tip-accordion {
+    background-color: white !important;
+    padding: 0px !important;
+    margin-bottom: 0px !important;
+}
+
+.tip-accordion-button {
+    background-color: var(--tmi-orange-bg) !important;
+    color: black !important;
+    font-weight: 700 !important;
+    height: 56px !important;
+}
+
+.accordion-item {
+    border: 0px !important;
+}
+
+.accordion:hover {
+    color: black !important;
 }
 
 .btn-blue-gradient {
@@ -363,6 +385,11 @@ p.tmi-content {
     background-color: white;
 }
 
+.card-survey-highlight {
+    border: 5px solid rgba(0, 106, 150, 0.45) !important;
+    box-shadow: 0px 0px 20px 2px #0E85B7 !important;
+}
+
 .card-survey-external {
     height: 214px;
     background-color: white;
@@ -528,7 +555,11 @@ h1.profile-h1 {
     }
 
     #profile-kebab-dropdown {
-        margin-top: 54px;
+        margin-top: 58px;
+        border: 1px solid var(--tmi-gray-70);
+        border-radius: 5px;
+        width: 40px;
+        height: 40px;
     }
 }
 
@@ -539,6 +570,10 @@ h1.profile-h1 {
 
     #profile-kebab-dropdown {
         margin-top: 24px;
+        border: 1px solid var(--tmi-gray-70);
+        border-radius: 5px;
+        width: 40px;
+        height: 40px;
     }
 }
 
@@ -745,6 +780,17 @@ li.active-profile {
     color: var(--tmi-blue);
 }
 
+.alert-nutrition {
+    background: var(--tmi-orange-bg);
+    border-left: 8px solid var(--tmi-orange);
+    border-radius: 12px;
+    color: var(--tmi-gray-90);
+}
+
+.alert-nutrition a {
+    color: var(--tmi-blue);
+}
+
 .blue-bg-card {
     background: var(--tmi-blue-bg);
     box-shadow: none;
@@ -793,6 +839,15 @@ li.active-profile {
     font-weight: 400 !important;
     font-size: 12px !important;
     line-height: 20px !important;
+    text-decoration: underline;
+}
+
+.skip-text {
+    color: var(--tmi-gray-80) !important;
+    font-weight: 400 !important;
+    font-size: 12px !important;
+    line-height: 20px !important;
+    text-decoration: underline;
 }
 
 .tmi-survey-radio-vertical > .field-wrap > .radio-list > label {
@@ -1136,6 +1191,18 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     padding: 36px;
 }
 
+@media (max-width: 575.98px) {
+    .kit-sample-container {
+        border: 1px solid var(--tmi-blue-bg);
+        border-radius: 25px;
+        padding: 8px;
+    }
+
+    .barcode-col-hide-mobile {
+        display: none;
+    }
+}
+
 .barcode-col {
     width: fit-content;
 }
@@ -1149,6 +1216,13 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     font-weight: 700;
     font-size: 16px;
     line-height: 26px;
+}
+
+.barcode-date-text {
+    color: var(--tmi-gray-80);
+    font-weight: 400l
+    font-size: 14px;
+    line-height: 24px;
 }
 
 .barcode-link {
@@ -1237,4 +1311,33 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     color: var(--tmi-blue);
     font-weight: 700;
     text-decoration: none;
+}
+
+.tip-modal-content {
+    box-shadow: 0px 0px 8px 2px rgba(102, 102, 102, 0.3);
+    border-radius: 25px;
+}
+
+.tip-modal-header {
+    border-top-left-radius: 25px !important;
+    border-top-right-radius: 25px !important;
+    background: var(--tmi-orange);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    height: 64px;
+}
+
+.tip-title {
+    margin-left: 8px;
+    color: white;
+    font-weight: 700;
+}
+
+.tip-contact {
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.tip-modal-footer {
+    justify-content: space-between !important;
 }
