--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -162,7 +162,7 @@
                         <strong>{{ _('Questionnaire tip') }}:</strong><br />
                         {{ _('You will be directed to an external site in a new browser tab to complete the FFQ') }}.<br />
                         {{ _('Remember to click "Finish" on the final page of the FFQ to register completion') }}.<br />
-                        {{ _('You can also resume the FFQ later by closing the browser tab. The option to "Continue FFQ" will then appear under My FFQs. ') }}.
+                        {{ _('You can also resume the FFQ later by closing the browser tab. The option to "Continue FFQ" will then appear under My FFQs') }}.
                     </p>
                     <p class="tmi-tooltip">
                         {{ _('Estimated time to complete: 30 minutes') }}
