--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -39,7 +39,7 @@
                             </div>
                             <div class="consent-col col-end">
                                 <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/data/view" class="consent-link" target="_blank">
-                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
+                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> {{ _('View') }}
                                 </a>
                             </div>
                         </div>
