--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -109,7 +109,7 @@
 
                 </div>
                 <div class="modal-footer tip-modal-footer">
-                    <span class="tip-contact">Can't find what you're looking for? <a href="mailto:microsetta@ucsd.edu" style="text-decoration: none;">Please let us know</a>.</span>
+                    <span class="tip-contact">{{ _('Can\'t find what you\'re looking for?') }} <a href="mailto:microsetta@ucsd.edu" style="text-decoration: none;">{{ _('Please let us know') }}</a>.</span>
                     <button type="button" class="btn btn-white-blue-border" id="tips_cancel" onClick="hideModalSiteBase();">{{ _('Close') }}</button>
                 </div>
             </div>
