--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -188,6 +188,11 @@
     </div>
     {% else %}
     <div class="container profile-container">
+        {% if prompt_survey_update %}
+        <div class="alert alert-primary alert-nutrition mt-4" role="alert">
+            {{ _('Thank you for logging your sample information. It looks like you haven\'t updated your profile recently. Please review') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('your survey responses') }}</a> {{ _('to ensure they\'re as current and complete as possible.') }}
+        </div>
+        {% endif %}
         <div class="alert alert-primary alert-profile mt-4" role="alert">
             {{ _('Click on the following link if you would like to contribute to receive a kit') }} - <a href="{{ fundrazr_url }}" target="_blank">{{ _('Get a Kit') }}</a>
         </div>
