--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -11,6 +11,7 @@
 
     <!-- Download and include supported languages and dialects here -->
     <script type="text/javascript" src="/static/vendor/jquery-ui-i18n/datepicker-es.js"></script>
+    <script type="text/javascript" src="/static/vendor/jquery-ui-i18n/datepicker-ja.js"></script>
     <script type="text/javascript" src="/static/vendor/jquery-validation/messages_{{ _(EN_US_KEY) }}.js"></script>
 
     <script>
