--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -119,9 +119,9 @@
                 <img src="/static/img/source_human.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">{{ _('Human Source') }}</div>
                 <div class="card-body">
-                    {{ _('Collect sample(s) from') }} <b>{{ _('yourself') }}</b> {{ _('(e.g. fecal, saliva, skin, etc.)') }}
+                    {{ _('Collect sample(s) from') }} {{ _('yourself') }} {{ _('(e.g. fecal, saliva, skin, etc.)') }}
                     <br/>
-                    {{ _('Collect sample(s) from') }} <b>{{ _('someone else') }}</b> {{ _('(e.g. fecal, saliva, skin, etc.)') }}
+                    {{ _('Collect sample(s) from') }} {{ _('someone else') }} {{ _('(e.g. fecal, saliva, skin, etc.)') }}
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg" href="/accounts/{{ account.account_id }}/create_human_source" role="button">{{ _('Select') }}</a>
@@ -131,7 +131,7 @@
                 <img src="/static/img/source_environmental.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">{{ _('Environmental Source') }}</div>
                 <div class="card-body">
-                    {{ _('Collect sample(s) from a') }} <b>{{ _('surface') }}</b> {{ _('(e.g. kitchen counter, backyard soil, food, etc.)') }}
+                    {{ _('Collect sample(s) from a') }} {{ _('surface') }} {{ _('(e.g. kitchen counter, backyard soil, food, etc.)') }}
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg" href="/accounts/{{ account.account_id }}/create_nonhuman_source" role="button">{{ _('Select') }}</a>
@@ -142,7 +142,7 @@
                 <div class="card-title center-text">{{ _('Animal Source') }}</div>
                 <div class="card-body d-flex flex-column">
                     <div>
-                        {{ _('Collect sample(s) from') }} <b>{{ _('your pet') }}</b> {{ _('or an') }} <b>{{ _('animal') }}</b> {{ _('(e.g. fecal, saliva, skin, etc.)') }}
+                        {{ _('Collect sample(s) from your pet or an animal') }} {{ _('(e.g. fecal, saliva, skin, etc.)') }}
                     </div>
                     <div class="mt-auto"><i class="align-self-end">{{ _('Animal sources are currently unavailable.') }}</i></div>
                 </div>
