Open THDMI Japan instructions in new tab

--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -47,7 +47,7 @@
 {% if japan_user %}
     <!-- TODO: ADD ACTUAL URL - THIS IS PENDING DOCUMENT CREATION NEXT WEEK -->
     <div class="alert alert-info text-center" role="alert">
-        <a href="https://microsetta.ucsd.edu/participant-resources/thdmi-jp/">{{ _('Participation Instructions') }}</a>
+        <a href="https://microsetta.ucsd.edu/participant-resources/thdmi-jp/" target="_blank">{{ _('Participation Instructions') }}</a>
     </div>
 {% endif %}
 <h4>{{ _('Account Details') }}</h4>
