Results content updates

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -343,7 +343,7 @@
             'button_text': "{{ _('Microbiomes in the Environment') }}",
             'img_div_id': 'pcoa-builtenv',
             'img_id': 'pcoa-builtenv-img',
-            'description': "<p>{{ _('Microbes don\'t just live inside and on your body; they are everywhere! Using the same techniques described in the previous maps, we compared your microbiome to samples collected from all over the surfaces of brand-new hospital offices.') }}</p><p>{{ _('As you can see, skin samples tend to more closely resemble those from \"the office surfaces,\" which makes sense as skin cells are constantly shedding from you. In an indoor environment, dust is typically composed of up to 50%% dead skin cells.') }}</p>"},
+            'description': "<p>{{ _('Microbes don\'t just live inside and on your body; they are everywhere! Using the same techniques described in the previous maps, we compared your microbiome to samples collected from all over the surfaces of brand-new hospital offices.') }}</p><p>{{ _('As you can see, skin samples tend to more closely resemble those from \'the office surfaces,\' which makes sense as skin cells are constantly shedding from you. In an indoor environment, dust is typically composed of up to 50%% dead skin cells.') }}</p>"},
         'tmi_WGS_gut_multipop': {
             'dataset': 'multipop-WGS-gut',
             'category': 'microbial_map_region',
